2004-02-22  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* gtk/gdk.override (_wrap_gdk_pixbuf_new_from_array)
	(_wrap_gdk_pixbuf_new_from_array): apply Tim Evans' patch to
	create pixbuf from data (string) or from a Numeric Python array.

2004-02-22  Xavier Ordoquy  <xordoquy@wanadoo.fr>

	* codegen/h2def.py: don't expect a whitespace after the type name
	Fixes bug #128988, patch from Jon Willeke.

2004-02-19  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* gtk/gtktreeview.override (pygtk_cell_data_func_marshal): Fix
	multiple python object reference leaks.

2004-02-14  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* gtk/gtk.override (_wrap_gtk_binding_entry_remove): impl.

	* gtk/gtk.defs (binding_entry_remove): remove gtk_ prefix from
	function name.

2004-02-10  Seth Nickell  <seth@gnome.org>

	Reviewed by: random luser <kiko@async.com.br>

	* gtk/gdk.override:

	Change type of argument in signature for gdk.event_get_axis
	from "d" to "i" so that get_axis works

2004-01-14  Johan Dahlin  <johan@gnome.org>

	* gtk/pygtktreemodel.c (pygtk_generic_tree_model_iter_n_children):
	Allow iter to be set to NULL, based on patch by Don Allingham
	Fixes bug 125172

2003-12-24  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* pygtype.c (pyg_value_as_pyobject): Add special handling for
	GValueArray, converting it to a tuple while calling
	pyg_value_as_pyobject recursively for each inner value.

2003-12-23  James Henstridge  <james@daa.com.au>

	* gtk/gtktreeview.override
	(pygtk_tree_selection_get_selected_rows): implement (fixes bug
	#111489).

	* codegen/h2def.py (clean_func): apply patch from Jon Willeke
	<willeke@users.sourceforge.net> to strip out eg. G_BEGIN_DECLS,
	which was tripping up some of the following regexps (fixes bug
	#129414).

	* pygobject.c (pygobject_get_property): explicitly check if the
	property is readable first, and raise an exception otherwise