@@ -1,3 +1,9 @@
+2004-02-23  Xavier Ordoquy  <xordoquy@wanadoo.fr>
+
+	* Makefile.am:
+	* gtk/Makefile.am: applied patch from Naofumi Yasufuku. Fixes
+	bug 121339 (dsextras.py installation directory).
+
 2004-02-22  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>
 
 	* gtk/gdk.override (_wrap_gdk_pixbuf_new_from_array)
